--- a/foundations/flex/06-flex-layout/index.html
+++ b/foundations/flex/06-flex-layout/index.html
@@ -1,27 +1,32 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>LAYOUT</title>
-    <link rel="stylesheet" href="./style.css">
+    <link rel="stylesheet" href="./style.css" />
   </head>
   <body>
     <div class="header">
-      <ul class="left-links">
-        <li><a href="#">About</a></li>
-        <li><a href="#">Store</a></li>
-      </ul>
-      <ul class="right-links">
-        <li><a href="#">Profile</a></li>
-        <li><a href="#">Settings</a></li>
-      </ul>
+      <div class="headerLinks">
+        <ul class="left-links">
+          <li><a href="#">About</a></li>
+          <li><a href="#">Store</a></li>
+        </ul>
+        <ul class="right-links">
+          <li><a href="#">Profile</a></li>
+          <li><a href="#">Settings</a></li>
+        </ul>
+      </div>
     </div>
     <div class="content">
-      <img src="./logo.png" alt="Project logo. Represents odin with the project name.">
+      <img
+        src="./logo.png"
+        alt="Project logo. Represents odin with the project name."
+      />
       <div class="input">
-        <input type="text">
+        <input type="text" />
       </div>
       <div class="buttons">
         <button>Do the thing!</button>
@@ -29,14 +34,16 @@
       </div>
     </div>
     <div class="footer">
-      <ul class="left-links">
-        <li><a href="#">Advertising</a></li>
-        <li><a href="#">Business</a></li>
-      </ul>
-      <ul class="right-links">
-        <li><a href="#">Privacy</a></li>
-        <li><a href="#">Terms</a></li>
-      </ul>
+      <div class="footerLinks">
+        <ul class="left-links">
+          <li><a href="#">Advertising</a></li>
+          <li><a href="#">Business</a></li>
+        </ul>
+        <ul class="right-links">
+          <li><a href="#">Privacy</a></li>
+          <li><a href="#">Terms</a></li>
+        </ul>
+      </div>
     </div>
   </body>
 </html>
