--- a/foundations/flex/06-flex-layout/index.html
+++ b/foundations/flex/06-flex-layout/index.html
@@ -21,7 +21,7 @@
       </div>
     </div>
     <div class="content">
-      <img
+      <img class="logo"
         src="./logo.png"
         alt="Project logo. Represents odin with the project name."
       />
